reverted package-visibility for abstract classes (JUnit issue); sorted class members in tests; fixed all test errors