@@ -22,94 +22,15 @@ import org.espilce.commons.lang.test.conversionutils.TestIRelative;
 import org.espilce.commons.lang.test.conversionutils.TestIScheme;
 import org.junit.Test;
 
-abstract class TestJavaUrl2JavaUri extends TestABase
+public abstract class TestJavaUrl2JavaUri extends TestABase
 		implements TestIBase, TestIAbsolute, TestIRelative, TestIScheme
 {
 	@Override
 	@Test
-	public void paramNull() throws Exception {
-		final URL input = (URL) null;
+	public void absoluteFile() throws Exception {
+		final URL input = new URL("file:/MyFile.ext");
 		final URI actual = invoke(input);
-		assertNull(actual);
-	}
-
-	@Override
-	@Test
-	public void root() throws Exception {
-		final URL input = new URL("file:/");
-		final URI actual = invoke(input);
-		final URI expected = new URI("file:/");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void empty() throws Exception {
-		final URL input = new URL("file:");
-		final URI actual = invoke(input);
-		assertNull(actual);
-	}
-	
-	@Override
-	@Test
-	public void emptyWithScheme() throws Exception {
-		final URL input = new URL("http:///");
-		final URI actual = invoke(input);
-		final URI expected = new URI("http:///");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void otherSchema() throws Exception {
-		final URL input = new URL("https://example.com/MyFile.ext");
-		final URI actual = invoke(input);
-		final URI expected = new URI("https://example.com/MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void relativeFile() throws Exception {
-		final URL input = new URL("file:MyFile.ext");
-		final URI actual = invoke(input);
-		final URI expected = new URI("file:MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void absoluteWindowsPathSingleSlash() throws Exception {
-		final URL url = new URL("file:/c:/some/path/MyFile.ext");
-		final URI actual = invoke(url);
-		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void absoluteWindowsPathDoubleSlash() throws Exception {
-		final URL url = new URL("file://c:/some/path/MyFile.ext");
-		final URI actual = invoke(url);
-		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void absoluteWindowsPathTripleSlash() throws Exception {
-		final URL url = new URL("file:///c:/some/path/MyFile.ext");
-		final URI actual = invoke(url);
-		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void absoluteNestedFile() throws Exception {
-		final URL input = new URL("http:/myProject/folder/deep/myFile.ext");
-		final URI actual = invoke(input);
-		final URI expected = new URI("http:/myProject/folder/deep/myFile.ext");
+		final URI expected = new URI("file:/MyFile.ext");
 		assertEquals(expected, actual);
 	}
 	
@@ -142,19 +63,108 @@ abstract class TestJavaUrl2JavaUri extends TestABase
 	
 	@Override
 	@Test
-	public void fragment() throws Exception {
-		final URL input = new URL("http:/myProject///myFolder#fragment");
+	public void absoluteNestedFile() throws Exception {
+		final URL input = new URL("http:/myProject/folder/deep/myFile.ext");
 		final URI actual = invoke(input);
-		final URI expected = new URI("http:/myProject///myFolder#fragment");
+		final URI expected = new URI("http:/myProject/folder/deep/myFile.ext");
 		assertEquals(expected, actual);
 	}
 	
 	@Override
 	@Test
-	public void query() throws Exception {
-		final URL input = new URL("http:/myProject///myFolder?query");
+	public void absolutePath() throws Exception {
+		final URL input = new URL("file:/resource/..////");
 		final URI actual = invoke(input);
-		final URI expected = new URI("http:/myProject///myFolder?query");
+		final URI expected = new URI("file:/resource/..////");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void absolutePseudoFragment() throws Exception {
+		final URL input = new URL("file://myProject///myFolder%23query");
+		final URI actual = invoke(input);
+		final URI expected = new URI("file://myProject///myFolder%23query");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void absoluteWindowsPathDoubleSlash() throws Exception {
+		final URL url = new URL("file://c:/some/path/MyFile.ext");
+		final URI actual = invoke(url);
+		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void absoluteWindowsPathSingleSlash() throws Exception {
+		final URL url = new URL("file:/c:/some/path/MyFile.ext");
+		final URI actual = invoke(url);
+		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void absoluteWindowsPathTripleSlash() throws Exception {
+		final URL url = new URL("file:///c:/some/path/MyFile.ext");
+		final URI actual = invoke(url);
+		final URI expected = new URI("file:/c:/some/path/MyFile.ext");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void current() throws Exception {
+		final URL input = new URL("file:.");
+		final URI actual = invoke(input);
+		final URI expected = URI.create("file:.");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void currentRelativeNestedFile() throws Exception {
+		final URL input = new URL("file:./some/path/MyFile.ext");
+		final URI actual = invoke(input);
+		final URI expected = URI.create("file:./some/path/MyFile.ext");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void currentSlash() throws Exception {
+		final URL input = new URL("file:./");
+		final URI actual = invoke(input);
+		final URI expected = URI.create("file:./");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void empty() throws Exception {
+		final URL input = new URL("file:");
+		final URI actual = invoke(input);
+		assertNull(actual);
+	}
+	
+	@Override
+	@Test
+	public void emptyWithScheme() throws Exception {
+		final URL input = new URL("http:///");
+		final URI actual = invoke(input);
+		final URI expected = new URI("http:///");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void fragment() throws Exception {
+		final URL input = new URL("http:/myProject///myFolder#fragment");
+		final URI actual = invoke(input);
+		final URI expected = new URI("http:/myProject///myFolder#fragment");
 		assertEquals(expected, actual);
 	}
 	
@@ -178,37 +188,54 @@ abstract class TestJavaUrl2JavaUri extends TestABase
 	
 	@Override
 	@Test
-	public void relativeUri() throws Exception {
-		final URL input = new URL("mailto:/resource/...////");
+	public void multiRelativePath() throws Exception {
+		final URL input = new URL("file:resource/../some/dir/../../file.ext");
 		final URI actual = invoke(input);
-		final URI expected = new URI("mailto:/resource/...////");
+		final URI expected = new URI("file:resource/../some/dir/../../file.ext");
 		assertEquals(expected, actual);
 	}
 	
 	@Override
 	@Test
-	public void absoluteFile() throws Exception {
-		final URL input = new URL("file:/MyFile.ext");
+	public void otherSchema() throws Exception {
+		final URL input = new URL("https://example.com/MyFile.ext");
 		final URI actual = invoke(input);
-		final URI expected = new URI("file:/MyFile.ext");
+		final URI expected = new URI("https://example.com/MyFile.ext");
 		assertEquals(expected, actual);
 	}
 	
 	@Override
 	@Test
-	public void absolutePath() throws Exception {
-		final URL input = new URL("file:/resource/..////");
+	public void paramNull() throws Exception {
+		final URL input = (URL) null;
 		final URI actual = invoke(input);
-		final URI expected = new URI("file:/resource/..////");
+		assertNull(actual);
+	}
+	
+	@Override
+	@Test
+	public void parent() throws Exception {
+		final URL input = new URL("file:..");
+		final URI actual = invoke(input);
+		final URI expected = new URI("file:..");
 		assertEquals(expected, actual);
 	}
 	
 	@Override
 	@Test
-	public void relativeNestedFile() throws Exception {
-		final URL input = new URL("file:some/path/MyFile.ext");
+	public void query() throws Exception {
+		final URL input = new URL("http:/myProject///myFolder?query");
 		final URI actual = invoke(input);
-		final URI expected = new URI("file:some/path/MyFile.ext");
+		final URI expected = new URI("http:/myProject///myFolder?query");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void relativeFile() throws Exception {
+		final URL input = new URL("file:MyFile.ext");
+		final URI actual = invoke(input);
+		final URI expected = new URI("file:MyFile.ext");
 		assertEquals(expected, actual);
 	}
 	
@@ -241,73 +268,19 @@ abstract class TestJavaUrl2JavaUri extends TestABase
 	
 	@Override
 	@Test
+	public void relativeNestedFile() throws Exception {
+		final URL input = new URL("file:some/path/MyFile.ext");
+		final URI actual = invoke(input);
+		final URI expected = new URI("file:some/path/MyFile.ext");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
 	public void relativePath() throws Exception {
 		final URL input = new URL("file:resource/..////");
 		final URI actual = invoke(input);
 		final URI expected = new URI("file:resource/..////");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void multiRelativePath() throws Exception {
-		final URL input = new URL("file:resource/../some/dir/../../file.ext");
-		final URI actual = invoke(input);
-		final URI expected = new URI("file:resource/../some/dir/../../file.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void current() throws Exception {
-		final URL input = new URL("file:.");
-		final URI actual = invoke(input);
-		final URI expected = URI.create("file:.");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void currentSlash() throws Exception {
-		final URL input = new URL("file:./");
-		final URI actual = invoke(input);
-		final URI expected = URI.create("file:./");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void currentRelativeNestedFile() throws Exception {
-		final URL input = new URL("file:./some/path/MyFile.ext");
-		final URI actual = invoke(input);
-		final URI expected = URI.create("file:./some/path/MyFile.ext");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void startRelativePath() throws Exception {
-		final URL input = new URL("file:../resource/..////");
-		final URI actual = invoke(input);
-		final URI expected = URI.create("file:../resource/..////");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void absolutePseudoFragment() throws Exception {
-		final URL input = new URL("file://myProject///myFolder%23query");
-		final URI actual = invoke(input);
-		final URI expected = new URI("file://myProject///myFolder%23query");
-		assertEquals(expected, actual);
-	}
-	
-	@Override
-	@Test
-	public void parent() throws Exception {
-		final URL input = new URL("file:..");
-		final URI actual = invoke(input);
-		final URI expected = new URI("file:..");
 		assertEquals(expected, actual);
 	}
 	
@@ -321,10 +294,37 @@ abstract class TestJavaUrl2JavaUri extends TestABase
 	}
 	
 	@Override
-	protected Class<?> getTargetType() { return URL.class; }
+	@Test
+	public void relativeUri() throws Exception {
+		final URL input = new URL("mailto:/resource/...////");
+		final URI actual = invoke(input);
+		final URI expected = new URI("mailto:/resource/...////");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void root() throws Exception {
+		final URL input = new URL("file:/");
+		final URI actual = invoke(input);
+		final URI expected = new URI("file:/");
+		assertEquals(expected, actual);
+	}
+	
+	@Override
+	@Test
+	public void startRelativePath() throws Exception {
+		final URL input = new URL("file:../resource/..////");
+		final URI actual = invoke(input);
+		final URI expected = URI.create("file:../resource/..////");
+		assertEquals(expected, actual);
+	}
 	
 	@Override
 	protected Class<?> getSourceType() { return URI.class; }
+	
+	@Override
+	protected Class<?> getTargetType() { return URL.class; }
 	
 	protected abstract URI invoke(URL input);
 }
